<resources>
    <string name="app_name">PRT Status</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="status_text_temp">The PRT is probably not running, but now you\'ll know if it is. This (should) be replaced with the current status soon.</string>
    <string name="last_updated_temp">Last Updated Never</string>
    <string name="last_updated">Last Updated %s</string>
    <string name="action_infolinks">PRT Info</string>
    <string name="action_call">Call PRT Support</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="city_name">Brooks Hall, Morgantown</string>
    <string name="weather_credits">data provided by Weather Underground</string>
    <string name="weather_img_desc">the current weather conditions</string>
    <string name="weather_cond_text">--</string>
    <string name="weather_temp_text">-- \u00B0 F</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_other">Other</string>

    <string name="pref_enable_weather_title">Enable Weather</string>
    <string name="pref_enable_weather_desc">Shows the current weather conditions as recorded from the Brooks Hall weather sensor on the Downtown campus in a card beneath the current PRT status.</string>

    <string name="pref_num_recent_title">Number of Recent Updates</string>
    <string name="pref_num_recent_desc">The number of recent updates to display on the main screen.</string>
    <string-array name="pref_num_recent_opts">
        <item>None</item>
        <item>24 hours</item>
        <item>5 days</item>
        <item>10 days</item>
        <item>15 days</item>
        <item>3 updates</item>
        <item>5 updates</item>
        <item>10 updates</item>
        <item>15 updates</item>
    </string-array>
    <string-array name="pref_num_recent_vals">
        <item>-1</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>150</item>
    </string-array>

    <string name="pref_temp_type_title">Temperature Display Type</string>
    <string name="pref_temp_type_desc">Display "Feels Like" or actual temperature.</string>

    <string-array name="pref_temp_type_types">
        <item>Feels Like</item>
        <item>Actual</item>
    </string-array>
    <string-array name="pref_temp_type_vals">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_notifications">Enable Notifications</string>
    <string name="pref_description_notifications">Enable notifications on any system changes</string>
    <string name="notif_channel_name">PRT Status Updates</string>
    <string name="notif_channel_desc">PRT Status updates and miscellaneous events</string>

    <string name="pref_title_notification_types">Select Notification Types</string>
    <string name="pref_description_notification_types">Only the following types of service events will trigger a notification.</string>
    <string-array name="pref_list_notif_types">
        <item>PRT Open</item>
        <item>Service Disruptions</item>
        <item>PRT Closed</item>
    </string-array>

    <string name="pref_title_select_stations">Select Stations</string>
    <string name="pref_summary_select_stations">If notifications are enabled, only the stations selected here will trigger an alert.</string>
    <string-array name="pref_list_stations_titles">
        <item>Beechurst</item>
        <item>Walnut</item>
        <item>Engineering</item>
        <item>Towers</item>
        <item>Medical</item>
    </string-array>

    <string name="pref_title_notification_style">Notification Style</string>
    <string name="pref_summary_notification_style">Android Oreo (8.0+) allows users to directly edit style of app notifications in the Settings app.</string>

    <string name="pref_reset_data_name">Clear Stored Data</string>
    <string name="pref_reset_data_desc">Deletes this app\'s locally saved data. When in doubt, this fixes most bugs.</string>
    <string name="pref_confirm_title">Delete Local Data</string>
    <string name="pref_confirm_msg">This will remove all locally stored cached status updates, restart the app, and reload the local database with the previous 10 events. Are you sure you wish to do this?</string>

    <string name="pref_title_enable_ads">Enable Advertisements</string>
    <string name="pref_description_enable_ads">By default, the app is completely ad-free. Turning them on will show a single, small, unobtrusive advertisement directly below the current weather. All support is very appreciated, and the few dollars from ad revenue will help further development efforts.</string>

    <string name="status_api">https://prtstat.us/api/status</string>
    <string name="weather_api">https://prtstat.us/api/weather</string>
    <string name="weather_uri">https://www.wunderground.com/personal-weather-station/dashboard?ID=KWVMORGA25&amp;apiref=1073699a99ea207a</string>
    <string name="links_json">https://storage.googleapis.com/wvuprtstatus-ec646.appspot.com/links.json</string>
    <string name="about_html">https://storage.googleapis.com/wvuprtstatus-ec646.appspot.com/about.html</string>
    <string name="modpub_app_id">ca-app-pub-9151949953714861~3453430320</string>
    <string name="modpub_main_ad_unit_id">ca-app-pub-9151949953714861/2318998979</string>

    <string name="prt_number">3042935011</string>

    <string name="pref_okay">Thanks</string>
    <string name="pref_close">Close</string>
    <string name="pref_about_title">About</string>
</resources>
