<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPaddingTop="10dp"
    app:contentPaddingBottom="5dp"
    app:contentPaddingRight="@dimen/card_padding">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:contentDescription="@string/weather_img_desc"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/city_name"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="#333"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/conditionsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#333"
                    android:text="@string/weather_cond_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/weather_temp_text"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#333"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/creditsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/weather_credits"
            android:gravity="end"
            android:textSize="10sp"
            android:textStyle="italic" />
    </LinearLayout>

</android.support.v7.widget.CardView>